test/functions/bradc/queryClassArgGenerics-bad.good
queryClassArgGenerics-bad.chpl:15: error: unresolved call 'foo(C(int(64),2), C(int(64),3))'
queryClassArgGenerics-bad.chpl:6: note: candidates are: foo(x: borrowed C(t = ?tt, r = ?rr), y: borrowed C(tt, rr))
